--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,7 @@
         <form method="post" class="space-y-6">
             <h1 class="text-2xl font-semibold text-center text-white mb-4">Please sign in</h1>
             {% if error %}
-                <div class="bg-red-600 text-white p-3 rounded-md text-sm">
+                <div class="bg-rose-600 text-white p-3 rounded-md text-sm">
                     {{ error.messageKey|trans(error.messageData, 'security') }}
                 </div>
             {% endif %}
@@ -25,6 +25,7 @@
                     Sign in
                 </button>
             </div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         </form>
     </div>
 </div>
